update jury swagger
